--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-tap-event-plugin": "^3.0.3",
     "socket.io-client": "^4.1.2",
+    "timeago.js": "^4.0.0-beta.3",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.10"
   },
