--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.49.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
+    "react-if": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tap-event-plugin": "^3.0.3",
     "socket.io-client": "^4.1.2",
+    "superagent": "^6.1.0",
     "timeago.js": "^4.0.0-beta.3",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.10"
