--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.49.0",
-    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "latest-version": "^6.0.0",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
