--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "base-64": "^1.0.0",
     "bootstrap": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "latest-version": "^6.0.0",
