--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-if": "^4.0.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-tap-event-plugin": "^3.0.3",
+    "redux": "^4.1.1",
     "socket.io-client": "^4.1.2",
     "superagent": "^6.1.0",
     "timeago.js": "^4.0.0-beta.3",
