--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "react-scripts": "4.0.3",
     "react-tap-event-plugin": "^3.0.3",
     "redux": "^4.1.1",
-    "socket.io-client": "^4.1.2",
+    "socket.io-client": "^4.2.0",
     "superagent": "^6.1.0",
-    "timeago.js": "^4.0.0-beta.3",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.10"
   },
