--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.21.1",
     "base-64": "^1.0.0",
     "bootstrap": "^5.0.2",
+    "bourbon": "^7.0.0",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "latest-version": "^6.0.0",
     "material-ui": "^0.20.2",
