--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "base-64": "^1.0.0",
     "bootstrap": "^5.1.0",
     "bourbon": "^7.0.0",
+    "cors": "^2.8.5",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "latest-version": "^6.0.0",
